--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "json": "^11.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
