--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "json": "^11.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.7"
+    "mysql2": "^3.12.0",
+    "nodemon": "^3.1.7",
+    "sequelize": "^6.37.5"
   }
 }
