--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,15 @@
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "json": "^11.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.7",
     "sequelize": "^6.37.5"
   }
