--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon server.js"
   },
+    "jest": {
+      "testMatch": ["**/backend/test/**/*.test.js"]
+    },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -33,5 +36,8 @@
     "pdf-parse": "^1.1.1",
     "puppeteer": "^24.1.1",
     "sequelize": "^6.37.5"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
