--- a/package.json
+++ b/package.json
@@ -1,13 +1,34 @@
 {
- 
+ 
     "scripts": {
-        "test": "jest"
+ 
+     
+    "test": "jest"
+ 
     },
+ 
     "devDependencies": {
-        "@babel/core": "^7.26.9",
-        "@babel/preset-env": "^7.26.9",
-        "babel-jest": "^29.7.0",
-        "jest": "^29.7.0",
-        "supertest": "^7.0.0"
+ 
+     
+    "@babel/core": "^7.26.9",
+ 
+     
+    "@babel/preset-env": "^7.26.9",
+ 
+     
+    "@testing-library/jest-dom": "^6.6.3",
+ 
+     
+    "@testing-library/react": "^16.2.0",
+ 
+     
+    "babel-jest": "^29.7.0",
+ 
+     
+    "jest": "^29.7.0",
+ 
+     
+    "supertest": "^7.0.0"
+ 
     }
 }
